# crossdo-backend

./: .example.env  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/commons/: database.py  openapi.py  schemas.py  settings.py
app/courses/: models.py  router.py  schemas.py
app/courses_streams/: models.py  router.py  schemas.py
app/users/: models.py  users.py
