[tool.poetry]
name = "crossdo-backend"
version = "0.1.0"
description = ""
authors = ["Evgeniy Mishkin <mjos1995@gmail.com>"]
packages = [{ include = "app"}]

[tool.poetry.scripts]
serve = "bin.main:serve"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
fastapi = "^0.110.1"
uvicorn = { version = "^0.29.0", extras = ["standard"] }
fastapi-users = { version = "^13.0.0", extras = ["sqlalchemy","oauth"] }
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"
python-multipart = "^0.0.9"
aiosqlite = "^0.20.0"
authlib = "*"
itsdangerous = "*"



[tool.poetry.dev-dependencies]
pytest-cov = "^5.0.0"
isort = "^5.13.2"
black = "^24.4.0"
flake8-isort = "^6.1.1" # предупреждение о неправильной позиции импорта в файле согласно настройкам isort
flake8-builtins = "^2.5.0" # предупреждение об использовании стандартных имен python в нейминге переменных
flake8-blind-except = "^0.2.1" # предупреждение об использовании except без аргумента
flake8-debugger = "^4.1.2" # предупреждение об использовании дебаггера в коде
flake8-tuple = "^0.4.1" # предупреждение об использовании кортежей из одного элемента. пример, return some_parameter,
flake8-quotes = "^3.4.0" # предупреждение об использовании двойных ковычек
flake8-eradicate = "^1.5.0"  # предупреждение об использовании мертвого кода
flake8-broken-line = "^1.0.0"  # предупреждение о переносе строк
flake8-comprehensions = "^3.14.0"  # форматирование comprehensions
flake8-bugbear = "^24.2.6" # предупреждает о возможных багах и проблемах дизайна
flake8 = "^7.0.0"
pytest-dotenv = "^0.5.2"
freezegun = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
known_first_party = "app"
known_third_party = "pydantic"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
balanced_wrapping = true
lines_after_imports = 2
lines_between_sections = 1
skip = ["protos", ".git",".vscode", ".idea", "env",".env",".venv",".venvx",".pytest_cache",".mypy_cache","__init__.py"]


[tool.black]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
extend_exclude = "protos"

[tool.pytest.ini_options]
env_files = ".test.env"
filterwarnings = [
    "ignore::pytest.PytestCacheWarning",
]
